feat(sdk): add os/arch on worker model v2
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -18,8 +18,7 @@ testcases:
 - name: commitStep
   steps:
     - script: rm -Rf /tmp/myrepo && git clone "http://{{.git.user}}:{{.git.password}}@localhost:3000/{{.git.user}}/myrepo.git" /tmp/myrepo
-    - script: mkdir -p /tmp/myrepo/.cds/worker-model-templates && mkdir -p /tmp/myrepo/.cds/worker-models
-    - script: cat ./fixtures/worker-model-template/tmpl-docker.yml > /tmp/myrepo/.cds/worker-model-templates/tmpl-docker.yml
+    - script: mkdir -p /tmp/myrepo/.cds/worker-models
     - script: cat ./fixtures/worker-model/docker-debian9.yml > /tmp/myrepo/.cds/worker-models/docker-debian9.yml
     - script: cd /tmp/myrepo && git config user.email "{{.git.user}}@gitea.eu" && git config user.name "{{.git.user}}"
     - script: cd /tmp/myrepo && git add /tmp/myrepo/.cds/* && git commit . --gpg-sign=2B74B3591CEFB2F534265465E027B500E97E52E7 -m "add file and sign" && git push
@@ -62,10 +61,6 @@ testcases:
         - result.code ShouldEqual 0
         - 'result.systemout ShouldContainSubstring "status: Success"'
         - 'result.systemout ShouldContainSubstring "key_sign_id: E027B500E97E52E7"'
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental worker-model template list ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo --format json
-      assertions:
-        - result.code ShouldEqual 0
-        - result.systemoutjson.systemoutjson0.name ShouldEqual docker-unix
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental worker-model list ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo --format json
       assertions:
         - result.code ShouldEqual 0
