--- a/tests/fixtures/worker-model/docker-debian9.yml
+++ b/tests/fixtures/worker-model/docker-debian9.yml
@@ -1,9 +1,8 @@
 name: docker-debian
 description: my debian worker model
+osarch: linux/amd64
 type: docker
 spec:
   image: buildpack-deps:buster
-  cmd: curl {{.API}}/download/worker/linux/$(uname -m) -o worker && chmod +x worker && exec ./worker
-  shell: sh -c
   envs:
     MYVAR: toto
