--- a/ui/package.json
+++ b/ui/package.json
@@ -133,7 +133,7 @@
     "karma-jasmine": "4.0.0",
     "karma-jasmine-html-reporter": "1.5.0",
     "karma-junit-reporter": "1.2.0",
-    "lint-staged": "^12.0.2",
+    "lint-staged": "12.0.2",
     "ts-node": "8.3.0",
     "typescript": "4.5.2",
     "url": "0.11.0",
