--- a/tests/fixtures/rbac/rbac_admin.yml
+++ b/tests/fixtures/rbac/rbac_admin.yml
@@ -6,6 +6,9 @@ projects:
   - role: manage-worker-model
     projects: [ITCLIPRJVCS]
     users: [cds.integration.tests.rw]
+  - role: manage-action
+    projects: [ITCLIPRJVCS]
+    users: [cds.integration.tests.rw]
 globals:
   - role: manage-permission
     users: [cds.integration.tests.rw]
