Apply suggestions from code review
Co-authored-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/tests/fixtures/ITCLIPRJVCS/pipeline.pip.yml
+++ b/tests/fixtures/ITCLIPRJVCS/pipeline.pip.yml
@@ -7,7 +7,7 @@ jobs:
   stage: AsCode
   steps:
   - name: ITCLIPRJVCS/my_vcs_server/gituser/myrepo/test-action@master
-    AsCodeAction:
+    asCodeAction:
       name: John Doe
   requirements:
   - model: docker-debian
