--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -79,6 +79,8 @@ testcases:
         - result.systemoutjson.status ShouldEqual Success
       retry: 30
       delay: 10
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} workflow logs download ITCLIPRJVCS ITCLIPRJVCSWRKFLW1-WORKFLOW 1 --pattern AsCode
+    - script: grep 'Hello' ITCLIPRJVCSWRKFLW1-WORKFLOW*.log
 
 - name: delete rbac on project
   steps:
