--- a/contrib/grpcplugins/action/plugin-artifactory-release-bundle-distribute/plugin-artifactory-release-bundle-distribute.yml
+++ b/contrib/grpcplugins/action/plugin-artifactory-release-bundle-distribute/plugin-artifactory-release-bundle-distribute.yml
@@ -3,8 +3,8 @@ type: action
 author: "François Samin <francois.samin@corp.ovh.com>"
 description: |
  Distributes a Artifactory Release Bundle on all the Jfrog Platform.
-parameters:
-  name: 
+inputs:
+  name:
     type: string
     description: Release Bundle name
   version:
