--- a/contrib/grpcplugins/action/plugin-script/script.yml
+++ b/contrib/grpcplugins/action/plugin-script/script.yml
@@ -1,9 +1,9 @@
-name: run-action-script
+name: script
 type: action
 author: "Steven GUIHEUX <steven.guiheux@corp.ovh.com>"
 description: |
   This action execute a script
-parameters:
+inputs:
   content:
     type: text
     description: The script to execute
