--- a/contrib/grpcplugins/action/plugin-tmpl/plugin-tmpl.yml
+++ b/contrib/grpcplugins/action/plugin-tmpl/plugin-tmpl.yml
@@ -5,7 +5,7 @@ description: |
   This action helps you generates a file using a template file and text/template golang package.
 
   Check documentation on text/template for more information https://golang.org/pkg/text/template.
-parameters:
+inputs:
   file:
     type: string
     description: Template file to use
