--- a/contrib/grpcplugins/action/plugin-arsenal-delete-alternative/plugin-arsenal-delete-alternative.yml
+++ b/contrib/grpcplugins/action/plugin-arsenal-delete-alternative/plugin-arsenal-delete-alternative.yml
@@ -3,7 +3,7 @@ type: action
 integration: Arsenal
 author: "OVH SAS"
 description: "OVH Arsenal Delete Alternative Plugin"
-parameters:
+inputs:
   alternative_name:
     type: string
     description: alternative name to delete, defaults to alternative from deployment integration if not set
