feat(worker,api): use new context in ascode action

--- a/tests/fixtures/ITCLIPRJVCS/pipeline.pip.yml
+++ b/tests/fixtures/ITCLIPRJVCS/pipeline.pip.yml
@@ -6,8 +6,9 @@ jobs:
 - job: AsCodeJob
   stage: AsCode
   steps:
-  - name: ITCLIPRJVCS/my_vcs_server/gituser/myrepo/test-action@master
+  - name: actions/ITCLIPRJVCS/my_vcs_server/gituser/myrepo/test-parent-action@master
     asCodeAction:
       name: John Doe
+      allvars: ${{ vars }}
   requirements:
   - model: docker-debian
