--- a/tests/fixtures/ITCLIPRJVCS/pipeline.pip.yml
+++ b/tests/fixtures/ITCLIPRJVCS/pipeline.pip.yml
@@ -8,7 +8,7 @@ jobs:
   steps:
   - name: actions/ITCLIPRJVCS/my_vcs_server/gituser/myrepo/test-parent-action@master
     asCodeAction:
-      name: John Doe
+      name: ${{ cds.event.name }}
       allvars: ${{ vars }}
   requirements:
   - model: docker-debian
