--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -21,7 +21,8 @@ testcases:
     - script: mkdir -p /tmp/myrepo/.cds/worker-models
     - script: cat ./fixtures/worker-model/docker-debian9.yml > /tmp/myrepo/.cds/worker-models/docker-debian9.yml
     - script: mkdir -p /tmp/myrepo/.cds/actions
-    - script: cat ./fixtures/ITCLIPRJVCS/my-action.yml > /tmp/myrepo/.cds/actions/my-action.yml
+    - script: cat ./fixtures/ITCLIPRJVCS/my-parent-action.yml > /tmp/myrepo/.cds/actions/my-parent-action.yml
+    - script: cat ./fixtures/ITCLIPRJVCS/my-child-action.yml > /tmp/myrepo/.cds/actions/my-child-action.yml
     - script: cd /tmp/myrepo && git config user.email "{{.git.user}}@gitea.eu" && git config user.name "{{.git.user}}"
     - script: cd /tmp/myrepo && git add /tmp/myrepo/.cds/* && git commit . --gpg-sign=2B74B3591CEFB2F534265465E027B500E97E52E7 -m "add file and sign" && git push
 
@@ -63,13 +64,14 @@ testcases:
         - result.code ShouldEqual 0
         - 'result.systemout ShouldContainSubstring "status: Success"'
         - 'result.systemout ShouldContainSubstring "key_sign_id: E027B500E97E52E7"'
-        - 'result.systemout ShouldContainSubstring "my-action.yml"'
+        - 'result.systemout ShouldContainSubstring "my-parent-action.yml"'
+        - 'result.systemout ShouldContainSubstring "my-child-action.yml"'
         - 'result.systemout ShouldContainSubstring "docker-debian9.yml"'
         - 'result.systemout ShouldNotContainSubstring "error:"'
 - name: Push workflow and run it
   steps:
     - script: {{.cdsctl}} -f {{.cdsctl.config}} workflow push ITCLIPRJVCS ./fixtures/ITCLIPRJVCS/workflow.yml ./fixtures/ITCLIPRJVCS/pipeline.pip.yml ./fixtures/ITCLIPRJVCS/application.app.yml --skip-update-files
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} workflow run ITCLIPRJVCS ITCLIPRJVCSWRKFLW1-WORKFLOW
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} workflow run ITCLIPRJVCS ITCLIPRJVCSWRKFLW1-WORKFLOW  -d '{"name":"John"}'
       assertions:
         - result.code ShouldEqual 0
         - "result.systemout ShouldContainSubstring Workflow ITCLIPRJVCSWRKFLW1-WORKFLOW #1 has been launched"
@@ -80,7 +82,8 @@ testcases:
       retry: 30
       delay: 10
     - script: {{.cdsctl}} -f {{.cdsctl.config}} workflow logs download ITCLIPRJVCS ITCLIPRJVCSWRKFLW1-WORKFLOW 1 --pattern AsCode
-    - script: grep 'Hello' ITCLIPRJVCSWRKFLW1-WORKFLOW*.log
+    - script: cat ITCLIPRJVCSWRKFLW1-WORKFLOW*.log
+    - script: grep 'Hello John Doe from project ITCLIPRJVCS' ITCLIPRJVCSWRKFLW1-WORKFLOW*.log
 
 - name: delete rbac on project
   steps:
