--- a/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
+++ b/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
@@ -6,18 +6,13 @@ jobs:
   myFirstJob:
     stage: build
     name: This is my first job
-    contexts: [vars]
-    env:
-      wname: ${{ cds.workflow }}
-      proj: ${{ cds.project }}
-      name: $${{ cds.event.name }}
     if: cds.workflow == 'MyFirstWorkflow'
     steps:
       - run: |-
-          echo "Workflow: ${WNAME}"
+          echo "Workflow: ${{cds.workflow}}"
       - uses: actions/ITCLIPRJVCS/my_vcs_server/gituser/myrepo/test-parent-action@master
         with:
-          name: ${{ env.name }}
+          name: ${{ cds.event.name }}
           allvars: ${{ vars }}
       - run: |-
           echo "End"
