feat(api,ui): add workflow file analysis + ui (graph, yaml editor) (#6565)

--- a/tests/fixtures/rbac/rbac_admin.yml
+++ b/tests/fixtures/rbac/rbac_admin.yml
@@ -9,6 +9,9 @@ projects:
   - role: manage-action
     projects: [ITCLIPRJVCS]
     users: [cds.integration.tests.rw]
+  - role: manage-workflow
+    projects: [ITCLIPRJVCS]
+    users: [cds.integration.tests.rw]
 globals:
   - role: manage-permission
     users: [cds.integration.tests.rw]
