--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -72,6 +72,16 @@ testcases:
         - 'result.systemout ShouldContainSubstring "docker-debian9.yml"'
         - 'result.systemout ShouldNotContainSubstring "error:"'
 
+- name: Run ascode workflow
+  steps:
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo MyFirstWorkflow
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow status ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo MyFirstWorkflow 1 --format json
+      assertions:
+        - result.code ShouldEqual 0
+        - result.systemoutjson.status ShouldEqual "Fail"
+      retry: 30
+      delay: 10
+
 - name: delete rbac on project
   steps:
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac delete perm-test --force
