--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -13,7 +13,9 @@ testcases:
   - script: gpg --import ./fixtures/gpg-ADMIN/key.priv
   - script: gpg --import ./fixtures/gpg-ADMIN/key.pub
   - script: 'curl -X POST {{.git.host}}/api/v1/user/gpg_keys -u "{{.git.user}}:{{.git.password}}" -H "Content-type: application/json" -d @./fixtures/gpg-ADMIN/key.pub.json'
+  - script: envsubst < ./fixtures/rbac/rbac_hatchery.yml > ./fixtures/rbac/rbac_hatchery_replaced.yml
   - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac import ./fixtures/rbac/rbac_admin.yml --force
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac import ./fixtures/rbac/rbac_hatchery_replaced.yml --force
 
 - name: commitStep
   steps:
@@ -85,6 +87,9 @@ testcases:
 - name: delete rbac on project
   steps:
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac delete perm-test --force
+      assertions:
+        - result.code ShouldEqual 0
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac delete perm-hatchery-test --force
       assertions:
         - result.code ShouldEqual 0
 - name: delete repository on project
