--- a/tests/fixtures/rbac/rbac_hatchery.yml
+++ b/tests/fixtures/rbac/rbac_hatchery.yml
@@ -1,5 +1,5 @@
 name: perm-hatchery-test
 hatcheries:
-  - hatchery: "${CDS_HATCHERY_NAME}"
+  - hatchery: "${HATCHERY_NAME=}"
     region: default
     role: start-worker
