--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -84,6 +84,17 @@ testcases:
         - result.systemoutjson.status ShouldEqual "Success"
       retry: 30
       delay: 10
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo MyFirstWorkflow 1 --pattern myFirstJob
+    - script: ls -lrt && cat *myFirstJob*
+    - script: "cat *step-0 | grep \"Workflow: MyFirstWorkflow\""
+    - script: "cat *customaction | grep \"Welcome in action test-parent-action\""
+    - script: "cat *customaction | grep \"Hello Foo Doe from project ITCLIPRJVCS\""
+    - script: "cat *step-2 | grep \"Thank you\""
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo MyFirstWorkflow 1 --format json
+      assertions:
+        - result.code ShouldEqual 0
+        - result.systemoutjson.systemoutjson0.job_id ShouldEqual "myFirstJob"
+        - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
 
 - name: delete rbac on project
   steps:
