fix: allow user to read proj

--- a/tests/fixtures/rbac/rbac_admin.yml
+++ b/tests/fixtures/rbac/rbac_admin.yml
@@ -1,5 +1,8 @@
 name: perm-test
 projects:
+  - role: read
+    projects: [ ITCLIPRJVCS ]
+    users: [ cds.integration.tests.rw ]
   - role: manage
     projects: [ITCLIPRJVCS]
     users: [cds.integration.tests.rw]
