--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -94,6 +94,12 @@ testcases:
         - result.code ShouldEqual 0
         - result.systemoutjson.systemoutjson0.job_id ShouldEqual "myFirstJob"
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental worker list --format json
+      assertions:
+        - result.code ShouldEqual 0
+        - result.systemoutjson ShouldHaveLength 0
+      retry: 5
+      delay: 5
 
 - name: delete rbac on project
   steps:
