--- a/tests/fixtures/rbac/rbac_admin.yml
+++ b/tests/fixtures/rbac/rbac_admin.yml
@@ -15,6 +15,16 @@ projects:
   - role: manage-workflow
     projects: [ITCLIPRJVCS]
     users: [cds.integration.tests.rw]
+workflows:
+  - role: trigger
+    all_users: true
+    all_workflows: true
+    project: ITCLIPRJVCS
+regions:
+  - role: execute
+    all_users: true
+    organizations: [default]
+    region: default
 globals:
   - role: manage-permission
     users: [cds.integration.tests.rw]
