feat: use new route to install new plugins

--- a/contrib/grpcplugins/action/plugin-script/Makefile
+++ b/contrib/grpcplugins/action/plugin-script/Makefile
@@ -1,5 +1,5 @@
-
-TARGET_NAME 			= script
+PLUGIN_NAME		= script
+TARGET_NAME		= plugin-script
 
 ##### ^^^^^^ EDIT ABOVE ^^^^^^ #####
 
@@ -13,6 +13,6 @@ clean: mk_go_clean ## clean binary and tests results
 
 test: mk_go_test ## run unit tests
 
-publish: mk_plugin_publish ## publish the plugin on CDS. This use your cdsctl default context and commands cdsctl admin plugins import / binary-add.
+publish: mk_v2_plugin_publish ## publish the plugin on CDS. This use your cdsctl default context and commands cdsctl admin plugins import / binary-add.
 
 package: mk_plugin_package ## prepare the tar.gz file, with all binaries / conf files
