--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -13,10 +13,7 @@ testcases:
   - script: gpg --import ./fixtures/gpg-ADMIN/key.priv
   - script: gpg --import ./fixtures/gpg-ADMIN/key.pub
   - script: 'curl -X POST {{.git.host}}/api/v1/user/gpg_keys -u "{{.git.user}}:{{.git.password}}" -H "Content-type: application/json" -d @./fixtures/gpg-ADMIN/key.pub.json'
-  - script: export HATCHERY_NAME={{.hatchery.name}} && envsubst < ./fixtures/rbac/rbac_hatchery.yml > ./fixtures/rbac/rbac_hatchery_replaced.yml
   - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac import ./fixtures/rbac/rbac_admin.yml --force
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental region add default
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac import ./fixtures/rbac/rbac_hatchery_replaced.yml --force
 
 - name: commitStep
   steps:
@@ -84,13 +81,26 @@ testcases:
         - result.systemoutjson.status ShouldEqual "Success"
       retry: 30
       delay: 10
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo MyFirstWorkflow 1
+    - script: "cat *step-0 | grep \"Workflow: MyFirstWorkflow\""
+    - script: "cat *customaction | grep \"Welcome in action test-parent-action\""
+    - script: "cat *customaction | grep \"Hello Foo Doe from project ITCLIPRJVCS\""
+    - script: "cat *step-2 | grep \"Thank you\""
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo MyFirstWorkflow 1 --format json
+      assertions:
+        - result.code ShouldEqual 0
+        - result.systemoutjson.systemoutjson0.job_id ShouldEqual "myFirstJob"
+        - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental worker list --format json
+      assertions:
+        - result.code ShouldEqual 0
+        - result.systemoutjson ShouldHaveLength 0
+      retry: 5
+      delay: 5
 
 - name: delete rbac on project
   steps:
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac delete perm-test --force
-      assertions:
-        - result.code ShouldEqual 0
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac delete perm-hatchery-test --force
       assertions:
         - result.code ShouldEqual 0
 - name: delete repository on project
