--- a/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
+++ b/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
@@ -1,6 +1,20 @@
 name: MyFirstWorkflow
 on: [push]
 jobs:
+  skipJob:
+    name: This is a skipped job
+    if: 1 == 2
+    region: default
+    runs-on: ITCLIPRJVCS/my_vcs_server/gituser/myrepo/docker-debian@master
+    steps:
+      - run: echo 'Thanks you'
+  alwaysJob:
+    name: This is my first job
+    if: always()
+    region: default
+    runs-on: ITCLIPRJVCS/my_vcs_server/gituser/myrepo/docker-debian@master
+    steps:
+      - run: echo 'Always job'
   myFirstJob:
     name: This is my first job
     if: cds.workflow == 'MyFirstWorkflow'
