--- a/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
+++ b/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
@@ -25,7 +25,7 @@ jobs:
         id: checkout
       - uses: actions/ITCLIPRJVCS/my_vcs_server/gituser/myrepo/test-parent-action@master
         id: customaction
-      - run: echo 'Thanks you'
+      - run: echo 'Thank you'
   mySecondJob:
     name: This is my second job
     region: default
